# mouse_bluesky

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  startup_notes.txt
design_documentation/: architecture.md  contracts.md  demo_setup.md  design_decisions.md  improvement_backlog.md  operations.md  testing.md
examples/: 01_compile_validate.py  02_enqueue_queue_server.py  03_interactive_runengine_sim.py  04_start_qserver_demo.md  README.md
qserver_profile/profile_mouse/: history.sqlite
qserver_profile/profile_mouse/startup/: 00_plans.py  00_sim.py  01_re.py  02_tiledwriter.py  03_init_devices.py  existing_plans_and_devices.yaml  user_group_permissions.yaml
qserver_profile/startup/: 00_plans.py  00_sim.py  01_re.py  02_tiledwriter.py  03_init_devices.py  04_baseline.py  existing_plans_and_devices.yaml
src/mouse_bluesky/: cli.py  settings.py
src/mouse_bluesky/devices/: eiger.py  generator.py  mouse_motors.py  mouse_sensors.py  xarm.py
src/mouse_bluesky/interactive/: __init__.py  convenience.py  exposure.py  fit_models.py  runtime.py  scans.py
src/mouse_bluesky/interactive_scans/: defaults.py  exposure.py  fit_models.py  results.py  runtime.py  scans.py
src/mouse_bluesky/planner/: config_insertion.py  logbook2bluesky.py  logbook_integration.py  materialize.py  models.py  params.py  scheduler.py  sequence.py  validate.py
src/mouse_bluesky/plans/: atomic.py  configure.py  im_craw.py  public.py  sequence.py  snapshot.py
src/mouse_bluesky/protocols/: builtin.py  registry.py
tests/: __init__.py  test_config_insertion.py  test_configure_baseline.py  test_logbook2bluesky_enqueue.py  test_materialize.py  test_params.py  test_plan_parameters_contract.py  test_protocol_standard_measurements_repeats_list.py  test_sequence.py
tests/data/: example_logbook.xlsx
tests/data/mouse_configs/: 110.nxs  123.nxs  125.nxs  127.nxs  160.nxs  161.nxs  162.nxs  163.nxs  164.nxs  165.nxs  166.nxs
tests/integration/interactive_scans/: __init__.py  test_convenience_sim.py  test_scans_sim.py
tests/integration/planner/: test_logbook2bluesky_enqueue.py
tests/unit/devices/: test_xarm.py
tests/unit/interactive_scans/: test_exposure.py  test_fit_models.py  test_runtime.py
tests/unit/planner/: test_config_insertion.py  test_scheduler.py  (+3 more)
(+10 files in other folders)
